# BranchLayerFlow

./: .gitignore  README.md  pyproject.toml
.claude/skills/branchlayerflow/: SKILL.md
branchlayerflow/: __init__.py  core.py
examples/a2a/: README.md  client.py  inner_flow.py  pyproject.toml  server.py
examples/agent/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/agent-skills/: README.md  flow.py  main.py  pyproject.toml
examples/agent-skills/skills/: checklist.md  executive_summary.md  translation_zh.md
examples/agentic-rag/: README.md  flow.py  main.py  pyproject.toml
examples/async-basic/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/batch/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/batch-flow/: README.md  flow.py  main.py  pyproject.toml
examples/batch-node/: README.md  flow.py  main.py  pyproject.toml
examples/blf-auto-researcher/: README.md  flow.py  judge.py  main.py  program.md  pyproject.toml  utils.py
examples/blf-deep-research/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/blf-react-agent/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/blf-wide-research/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/chat/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/chat-guardrail/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/chat-memory/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/cli-hitl/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/code-generator/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/coding-agent/: README.md  flow.py  main.py  pyproject.toml  tools.py  utils.py
examples/communication/: README.md  flow.py  main.py  pyproject.toml
examples/debate/: README.md  flow.py  main.py  pyproject.toml
examples/deep-research/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/fastapi-background/: README.md  flow.py  pyproject.toml  server.py
examples/fastapi-hitl/: README.md  flow.py  pyproject.toml  server.py
examples/fastapi-websocket/: README.md  client.py  flow.py  pyproject.toml  server.py
examples/flow/: README.md  flow.py  main.py  pyproject.toml
examples/google-calendar/: README.md  calendar_tool.py  flow.py  main.py  pyproject.toml
examples/gradio-hitl/: README.md  app.py  flow.py  pyproject.toml  utils.py
examples/heartbeat/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/hello-world/: README.md  flow.py  main.py  pyproject.toml
examples/invoice/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/judge/: README.md  flow.py  main.py  pyproject.toml
examples/lead-generation/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/llm-streaming/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/majority-vote/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/map-reduce/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/mcp/: README.md  flow.py  main.py  pyproject.toml  server.py  utils.py
examples/multi-agent/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/nested-batch/: README.md  flow.py  main.py  pyproject.toml
examples/newsletter/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/node/: README.md  flow.py  main.py  pyproject.toml
examples/node/utils/: __init__.py  call_llm.py
examples/notebook-lm/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/parallel-batch/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/parallel-batch-flow/: README.md  flow.py  main.py  pyproject.toml
examples/rag/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/self-healing-mermaid/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/streamlit-fsm/: README.md  app.py  flow.py  pyproject.toml  utils.py
examples/structured-output/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/supervisor/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/tao/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/text2sql/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/thinking/: README.md  flow.py  main.py  pyproject.toml  utils.py
examples/tool-crawler/: README.md  flow.py  main.py  pyproject.toml  tool_crawl.py
examples/tool-database/: README.md  flow.py  main.py  pyproject.toml  tool_db.py
examples/tool-embeddings/: README.md  flow.py  main.py  pyproject.toml  tool_embed.py
examples/tool-pdf-vision/: README.md  flow.py  main.py  pyproject.toml  tool_pdf.py
examples/tool-search/: README.md  flow.py  main.py  pyproject.toml  tool_search.py
examples/tracing/: README.md  flow.py  main.py  pyproject.toml  tracer.py
examples/turtle-soup/: README.md  agents.py  flow.py  main.py  pyproject.toml  store.py
examples/visualization/: README.md  flow.py  main.py  pyproject.toml  visualizer.py
examples/voice-chat/: README.md  audio.py  flow.py  main.py  pyproject.toml  utils.py
examples/workflow/: README.md  flow.py  main.py  pyproject.toml  utils.py
tests/: README.md  pyproject.toml
tests/agent/: test_agent.py  test_async_agent.py  test_async_base_agent.py  test_base_agent.py
tests/flow/: test_async_base_flow.py  test_async_base_parallel_flow.py  test_async_flow.py  test_async_flow_multi_layers.py  test_async_flow_multi_layers_multi_branches.py  test_async_parallel_flow.py  test_base_flow.py  test_flow.py  test_flow_loop.py  test_flow_multi_branches.py  test_flow_multi_layers.py  test_flow_multi_layers_multi_branches.py  test_flow_to_flow.py
tests/meta/: test_base_meta.py
