[project]
name = "branchlayerflow"
version = "0.1.0"
description = "Lightweight multi-agent orchestration framework supporting parallel execution, loops, and iterative execution."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Larry Li" },
]
keywords = ["agent", "multi-agent", "orchestration", "async", "flow", "llm", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/larryteal/BranchLayerFlow"
Repository = "https://github.com/larryteal/BranchLayerFlow"
Issues = "https://github.com/larryteal/BranchLayerFlow/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["branchlayerflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/branchlayerflow",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/tests",
    "/examples",
    "/.gitignore",
    "/uv.lock",
    "*.png",
    "*.svg",
]

[tool.uv.workspace]
members = [
    "tests",
    "examples/*",
]
