[project]
name = "blf-example-agent-skills"
version = "0.1.0"
description = "Pick a markdown 'skill' file at runtime and apply it as system prompt."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
