[project]
name = "blf-example-agentic-rag"
version = "0.1.0"
description = "Agentic RAG: agent inspects summaries and decides which doc to read next; loops until it can answer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
