[project]
name = "blf-example-batch-flow"
version = "0.1.0"
description = "Image processing batch: each (image, filter) pair drives one sub-flow (Load -> Apply -> Save)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "Pillow>=10.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
