[project]
name = "blf-example-batch"
version = "0.1.0"
description = "Translate a markdown document into 8 languages in parallel using AsyncParallelBaseFlow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "anthropic>=0.40",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
