[project]
name = "blf-showcase-auto-researcher"
version = "0.1.0"
description = "Multi-stage autonomous researcher: plan -> parallel investigate -> verify -> drilldown -> report."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "httpx>=0.27",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
