[project]
name = "blf-showcase-deep-research"
version = "0.1.0"
description = "Iterative deepening research: plan -> parallel web search -> analyze -> loop, with real web search."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "httpx>=0.27",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
