[project]
name = "blf-showcase-react-agent"
version = "0.1.0"
description = "Tool-using reason->act->observe loop with web search and news search."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "httpx>=0.27",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
