[project]
name = "blf-showcase-wide-research"
version = "0.1.0"
description = "Wide breadth-first research: decompose topic -> parallel investigation sub-flows -> aggregate."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "httpx>=0.27",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
