[project]
name = "blf-example-chat-memory"
version = "0.1.0"
description = "Chat with sliding-window short-term memory + vector-recall long-term memory (faiss + OpenAI embeddings)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "numpy>=1.20",
    "faiss-cpu>=1.7",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
