[project]
name = "blf-example-chat"
version = "0.1.0"
description = "Single-agent self-loop chatbot. Conversation history lives in the shared store."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
