[project]
name = "blf-example-cli-hitl"
version = "0.1.0"
description = "CLI human-in-the-loop joke generator. Approve or reject; reject feeds back into the next try."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "anthropic>=0.40",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
