[project]
name = "blf-example-code-generator"
version = "0.1.0"
description = "Generate test cases, implement code, run tests, intelligently fix on failure."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "PyYAML>=6.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
