[project]
name = "blf-example-coding-agent"
version = "0.1.0"
description = "Autonomous coding agent with 6 tools and a patch-as-subflow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "PyYAML>=6.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
