[project]
name = "blf-example-debate"
version = "0.1.0"
description = "One-round debate: advocate FOR -> advocate AGAINST -> impartial judge."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
