[project]
name = "blf-example-deep-research"
version = "0.1.0"
description = "Recursive plan -> parallel-search -> synthesise loop. Up to N research rounds."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
