[project]
name = "blf-example-fastapi-background"
version = "0.1.0"
description = "FastAPI server: POST /generate kicks off a BLF article-writing flow in the background; GET /events streams progress via SSE."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "PyYAML>=6.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
