[project]
name = "blf-example-fastapi-hitl"
version = "0.1.0"
description = "FastAPI HITL: process -> wait for human approval -> done | reprocess. SSE for live updates."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
