[project]
name = "blf-example-google-calendar"
version = "0.1.0"
description = "List calendars and create an event using the Google Calendar API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "google-api-python-client>=2.130",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
