[project]
name = "blf-example-gradio-hitl"
version = "0.1.0"
description = "Gradio chat UI in front of a routing BLF flow (weather/booking/follow-up)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "gradio>=4.40",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
