[project]
name = "blf-example-heartbeat"
version = "0.1.0"
description = "Continuously running monitor: outer wait/cycle loop wraps an inner email-processing flow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
