[project]
name = "blf-example-invoice"
version = "0.1.0"
description = "PDF invoice -> GPT-4o vision extraction -> arithmetic validation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
