[project]
name = "blf-example-judge"
version = "0.1.0"
description = "Generator/judge evaluator-optimizer loop. The judge scores; the generator retries with feedback until the threshold is met."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branchlayerflow",
    "openai>=1.0",
    "PyYAML>=6.0",
]

[tool.uv.sources]
branchlayerflow = { workspace = true }
